# pyclassparser

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pyclassparser/: __init__.py
tests/: test_pyclassparser.py
