[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclassparser"
version = "0.8"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Parse Python classes and attributes from a string of Python code."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

keywords = ["pydantic", "parser", "tool", "schemas"]

requires-python = ">=3.12"

license = "MIT"
license-files = ["LICENSE"]

readme = "README.md"
dependencies=[
    "attrs>=23.2.0",
    "attrs_strict>=1.0.1",
]

[project.urls]
Repository = "https://github.com/carlosplanchon/pyclassparser.git"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.11",
]

[tool.setuptools]
packages = ["pyclassparser"]

[tool.setuptools.package-data]
pyclassparser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# attrs-strict ships no type information.
module = ["attrs_strict.*"]
ignore_missing_imports = true
